add 'still show mine' filter option
